# StockScreener

./: .dockerignore  .env.example  .gitignore  2026-06-14.md  2026-06-15.md  AGENT_CONTEXT.md  Dockerfile  ImprovementInstrtuctions.txt  README.md  analyze_results.py  api_server.py  commit_msg.txt  docker-compose.yml  generate_backtest_data.py  generate_calls.py  long_term_portfolio.py  main.py  optimize.py  pipeline.py  pyproject.toml  run_daily_scan.bat  run_dashboard.py  run_pipeline.py  scan_and_alert.py  setup_scheduler.ps1  smart_money.py  start_dashboard.bat  strategy_compare.py  telegram_notifier.py  update_calls.py  visualize_technical.py
.github/workflows/: ci.yml
config/: scanner_config.yaml
dashboard/: app.js  index.html  package-lock.json  package.json  style.css
dashboard/src/: App.tsx  styles.css
dashboard/src/components/: Layout.tsx
dashboard/src/components/ui/: Badge.tsx  Button.tsx  Card.tsx  Input.tsx  LoadingSpinner.tsx  Select.tsx  Table.tsx
dashboard/src/pages/: Backtest.tsx  Calls.tsx  Dashboard.tsx  Scanner.tsx  Settings.tsx
dashboard/src/types/: index.ts
dashboard/src/utils/: api.ts
diary/2026/06/: 2026-06-14-StockCalls.md  2026-06-15-StockCalls.md
docs/plans/: 2026-06-12-stock-scanner.md  2026-06-13-fundamental-engine-v2.md  2026-06-14-programmatic-optimizer.md
stock_scanner/: __init__.py  config.py  output.py  scanner.py
stock_scanner/data/: __init__.py  cache.py  provider.py
stock_scanner/engine/: PATTERN_RULES.md  __init__.py  backtest.py  calls_db.py  debate.py  explanation.py  fundamental.py  indicators.py  mtf.py  patterns.py  protocols.py  relative_strength.py  risk_flags.py  scoring.py  sector_config.py  sentiment.py  technical.py  trade_quality.py  typing.py
stock_scanner/pricelevels/: _abstract.py  cluster.py
stock_scanner/pricelevels/scoring/: abstract.py  touch_scorer.py
stock_scanner/pricelevels/visualization/: _helpers.py  levels_on_candlestick.py  levels_with_zigzag.py
stock_scanner/trendln/: __init__.py
tests/: conftest.py  test_backtest.py  test_config.py  test_fundamental.py  test_indicators.py  test_mtf.py  test_optimize.py  test_provider.py  test_relative_strength.py  test_scanner.py  test_scoring.py  test_technical.py  test_trade_quality.py
