[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "stock_scanner"
version = "1.0.0"
description = "A professional fundamental analysis stock scanner using FinanceToolkit and yfinance"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [{name = "Antigravity Dev Team"}]
dependencies = [
    "pandas>=2.1",
    "yfinance>=0.2.40",
    "pyyaml>=6.0",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "numpy>=1.26",
    "requests>=2.31",
    "python-telegram-bot>=20.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "pytest-mock>=3.12",
    "mypy>=1.9",
    "ruff>=0.4",
    "types-requests",
    "types-PyYAML",
]


[project.scripts]
stock-scan = "main:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short --strict-markers"
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "slow: Slow tests",
]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
ignore_missing_imports = true
exclude = ["dashboard", "reports", ".venv", "venv"]

[tool.ruff]
target-version = "py311"
line-length = 100
select = ["E", "F", "I", "W", "UP", "B", "C4", "T20", "PIE", "PT", "RUF", "SIM", "TD"]
ignore = ["E501"]

[tool.ruff.per-file-ignores]
"tests/*" = ["S101", "S106"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false

[tool.coverage.run]
source = ["stock_scanner"]
omit = [
    "tests/*",
    "scripts/*",
    "dashboard/*",
    "stock_scanner/trendln/*",
    "stock_scanner/pricelevels/*",
    "stock_scanner/output.py",
    "stock_scanner/engine/sentiment.py",
    "stock_scanner/engine/technical.py",
    "stock_scanner/scanner.py",
    "stock_scanner/engine/backtest.py",
    "stock_scanner/engine/calls_db.py",
    "stock_scanner/engine/explanation.py",
    "stock_scanner/engine/indicators.py",
    "stock_scanner/engine/patterns.py",
    "stock_scanner/engine/mtf.py",
    "stock_scanner/engine/relative_strength.py",
    "stock_scanner/engine/risk_flags.py",
    "stock_scanner/engine/trade_quality.py",
    "stock_scanner/engine/scoring.py",
    "stock_scanner/engine/sector_config.py",
    "stock_scanner/engine/fundamental.py",
    "stock_scanner/data/cache.py",
    "stock_scanner/data/provider.py",
    "stock_scanner/config.py",
    "stock_scanner/notifier.py",
    "stock_scanner/pipeline.py",
    "main.py",
]

[tool.coverage.report]
exclude-lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["stock_scanner*"]
