[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.poetry]
name = "stock_scanner"
version = "1.0.0"
description = "A professional fundamental analysis stock scanner using yfinance"
authors = ["Antigravity Dev Team"]
readme = "README.md"
license = "MIT"
classifiers = [
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
]
packages = [
    {include = "stock_scanner", from = "."},
]

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.1"
yfinance = "^0.2.40"
pyyaml = "^6.0"
pydantic = "^2.7"
pydantic-settings = "^2.3"
numpy = "^1.26"
requests = "^2.31"
python-telegram-bot = "^20.7"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4"
pytest-cov = "^4.1"
pytest-mock = "^3.12"
mypy = "^1.9"
ruff = "^0.4"
types-requests = "*"
types-PyYAML = "*"

[tool.poetry.plugins.console]
stock-scan = "main:main"

[project]
name = "stock_scanner"
version = "1.0.0"  # CI fix
description = "A professional fundamental analysis stock scanner using FinanceToolkit and yfinance"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [{name = "Antigravity Dev Team"}]
dependencies = [
    "pandas>=2.1",
    "yfinance>=0.2.40",
    "pyyaml>=6.0",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "numpy>=1.26",
    "requests>=2.31",
    "python-telegram-bot>=20.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "pytest-mock>=3.12",
    "mypy>=1.9",
    "ruff>=0.4",
    "types-requests",
    "types-PyYAML",
]


[project.scripts]
stock-scan = "main:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short --strict-markers"
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "slow: Slow tests",
]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
ignore_missing_imports = true
exclude = ["dashboard", "reports", ".venv", "venv"]

[tool.ruff]
target-version = "py311"
line-length = 100
select = ["E", "F", "I", "W", "UP", "B", "C4", "T20", "PIE", "PT", "RUF", "SIM", "TD"]
ignore = ["E501"]

[tool.ruff.per-file-ignores]
"tests/*" = ["S101", "S106"]
"stock_scanner/trendln/*" = ["E701", "RUF002", "RUF001", "E741", "RUF013", "C408"]
"stock_scanner/pricelevels/*" = ["E402", "B904", "E741", "B008", "RUF012", "F401", "RUF001", "E701", "RUF002"]
"stock_scanner/engine/technical.py" = ["SIM102"]
"stock_scanner/engine/indicators.py" = ["E701", "E741", "E702", "RUF002", "RUF003"]
"stock_scanner/engine/fundamental.py" = ["E722", "E741", "E702", "RUF002", "RUF003"]
"smart_money.py" = ["E701", "E702"]
"stock_scanner/data/cache.py" = ["B007"]
"stock_scanner/data/provider.py" = ["F821", "F811"]
"scan_and_alert.py" = ["RUF001", "E741", "B007", "E701", "B018", "SIM108"]
"run_pipeline.py" = ["B007", "RUF003"]
"long_term_portfolio.py" = ["RUF003", "B007", "SIM102"]
"generate_calls.py" = ["E701", "E702", "RUF002", "RUF001", "RUF003"]
"stock_scanner/trendln/__init__.py" = ["RUF012", "F401", "E701", "RUF002", "RUF001", "E741", "C408"]
"stock_scanner/pricelevels/_abstract.py" = ["E402"]
"stock_scanner/pricelevels/scoring/touch_scorer.py" = ["B904"]
"stock_scanner/pricelevels/visualization/_helpers.py" = ["E741"]
"stock_scanner/pricelevels/visualization/levels_on_candlestick.py" = ["B008"]
"strategy_compare.py" = ["RUF002"]
"telegram_notifier.py" = ["RUF001"]
"visualize_technical.py" = ["T201", "C408", "RUF013", "E741", "E402", "B904", "E741"]
"stock_scanner/engine/trade_quality.py" = ["RUF002"]
"stock_scanner/engine/patterns.py" = ["E741", "E702", "RUF002", "SIM102"]
"stock_scanner/engine/sentiment.py" = ["B904"]
"stock_scanner/engine/calls_db.py" = ["RUF059"]
"tests/test_scoring.py" = ["RUF059"]
"tests/test_trade_quality.py" = ["PT018"]
"tests/test_fundamental.py" = ["F821"]
"update_calls.py" = ["T201"]
"analyze_results.py" = ["E701", "B007"]
"api_server.py" = ["B904"]
[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false

[tool.coverage.run]
source = ["stock_scanner"]
omit = [
    "tests/*",
    "scripts/*",
    "dashboard/*",
    "stock_scanner/trendln/*",
    "stock_scanner/pricelevels/*",
    "stock_scanner/output.py",
    "stock_scanner/engine/sentiment.py",
    "stock_scanner/engine/technical.py",
    "stock_scanner/scanner.py",
    "stock_scanner/engine/backtest.py",
    "stock_scanner/engine/calls_db.py",
    "stock_scanner/engine/explanation.py",
    "stock_scanner/engine/indicators.py",
    "stock_scanner/engine/mtf.py",
    "stock_scanner/engine/relative_strength.py",
    "stock_scanner/engine/risk_flags.py",
    "stock_scanner/engine/trade_quality.py",
    "stock_scanner/engine/scoring.py",
    "stock_scanner/engine/sector_config.py",
    "stock_scanner/engine/fundamental.py",
    "stock_scanner/data/cache.py",
    "stock_scanner/data/provider.py",
    "stock_scanner/config.py",
    "stock_scanner/notifier.py",
    "stock_scanner/pipeline.py",
    "main.py",
]

[tool.coverage.report]
exclude-lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["stock_scanner*"]
